
	* user.lisp (*root-map*): bind C-t " to windowlist
	("next"): if no window is focused call other-window
	("prev"): likewise
	(*menu-map*): new keymap
	(menu-state): new struct
	(bound-check-menu): new function
	(menu-up): likewise
	(menu-down): likewise
	(menu-finish): likewise
	(menu-abort): likewise
	(select-from-menu): likewise
	("windowlist"): new command

	* primitives.lisp (*supress-echo-timeout*): new global

	* core.lisp (echo-string-list): dont reset timeout if *supress-echo-timeout* is T
	(read-from-keymap): new function
	(handle-keymap): only use the kmap's symbol value if it's bound and a hash-table

	* user.lisp (focus-next-window): cycle through all the frame windows
	(focus-prev-window): likewise
	(focus-forward): show the frame indicator when switching frames
	(run-or-raise): likewise
	("web"): use "Firefox-bin" class

	* primitives.lisp (*window-formatters*): use window-res 

	* core.lisp (export-selection): transform the characters to card8's

2006-11-26  Shawn Betts  <sabetts@shitbender.gagrod>

	* core.lisp (no-focus): pass the last focused window in as an argument. callers updated.

2006-11-25  Shawn Betts  <sabetts@shitbender.gagrod>

	* core.lisp (add-group): check the arg types

	* user.lisp (*group-map*): add bindings to move and kill groups
	(parse-and-run-command): new option :group
	(group-forward): call next-group
	("gmove"): new command
	("gkill"): likewise

	* primitives.lisp (run-hook-with-args): ignore errors
	(run-hook): likewise

	* core.lisp (move-window-to-group): new function
	(next-group): likewise
	(merge-groups): likewise
	(kill-group): likewise
	(window-in-current-group-p): likewise
	(raise-window): call window-in-current-group-p
	(unhide-window): only actually unhide the window when the window is in the current group
	(hide-window): likewise, but hide
	(remove-window): bug fix involving windows in non-current groups
	(no-focus): only actually focus nothing if the group is current
	(focus-window): call screen-set-focus